src/main/java/com/example/tinkoffstocksservice/adapter/web/errors/common/ErrorCode.java
package com.example.tinkoffstocksservice.adapter.web.errors.common;

public enum ErrorCode {
    VALIDATION_ERROR,
    NOT_FOUND
}
